// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) elevated-l-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "elevation": 1,
          "padding": 24,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) elevated-l-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "elevation": 1,
          "padding": 24,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) elevated-l-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "elevation": 1,
          "padding": 24,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) elevated-l-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "elevation": 1,
          "padding": 24,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) elevated-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "elevation": 1,
          "padding": 16,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) elevated-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "elevation": 1,
          "padding": 16,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) elevated-m-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "elevation": 1,
          "padding": 16,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) elevated-m-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "elevation": 1,
          "padding": 16,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) elevated-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "elevation": 1,
          "padding": 8,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) elevated-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "elevation": 1,
          "padding": 8,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) elevated-s-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "elevation": 1,
          "padding": 8,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) elevated-s-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "elevation": 1,
          "padding": 8,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) flat-l-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "padding": 24,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) flat-l-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "padding": 24,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) flat-l-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "padding": 24,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) flat-l-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "padding": 24,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) flat-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "padding": 16,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) flat-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "padding": 16,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) flat-m-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "padding": 16,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) flat-m-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "padding": 16,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) flat-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "padding": 8,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) flat-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "padding": 8,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) flat-s-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "padding": 8,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) flat-s-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "padding": 8,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) outlined-l-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderColor": "rgba(51, 51, 51, 0.05)",
          "borderRadius": 12,
          "borderWidth": 1,
          "padding": 24,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) outlined-l-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderColor": "rgba(51, 51, 51, 0.05)",
          "borderRadius": 12,
          "borderWidth": 1,
          "padding": 24,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) outlined-l-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderColor": "rgba(51, 51, 51, 0.05)",
          "borderRadius": 12,
          "borderWidth": 1,
          "padding": 24,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) outlined-l-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderColor": "rgba(51, 51, 51, 0.05)",
          "borderRadius": 12,
          "borderWidth": 1,
          "padding": 24,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) outlined-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderColor": "rgba(51, 51, 51, 0.05)",
          "borderRadius": 12,
          "borderWidth": 1,
          "padding": 16,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) outlined-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderColor": "rgba(51, 51, 51, 0.05)",
          "borderRadius": 12,
          "borderWidth": 1,
          "padding": 16,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) outlined-m-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderColor": "rgba(51, 51, 51, 0.05)",
          "borderRadius": 12,
          "borderWidth": 1,
          "padding": 16,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) outlined-m-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderColor": "rgba(51, 51, 51, 0.05)",
          "borderRadius": 12,
          "borderWidth": 1,
          "padding": 16,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) outlined-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderColor": "rgba(51, 51, 51, 0.05)",
          "borderRadius": 12,
          "borderWidth": 1,
          "padding": 8,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) outlined-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderColor": "rgba(51, 51, 51, 0.05)",
          "borderRadius": 12,
          "borderWidth": 1,
          "padding": 8,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) outlined-s-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderColor": "rgba(51, 51, 51, 0.05)",
          "borderRadius": 12,
          "borderWidth": 1,
          "padding": 8,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix baseline (variant x size x {default,disabled} x modes) outlined-s-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderColor": "rgba(51, 51, 51, 0.05)",
          "borderRadius": 12,
          "borderWidth": 1,
          "padding": 8,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;

exports[`Card — snapshot matrix non-Latin font-fallback canary (canaryVariant x size=default x default x light x lang) flat-s-default-light-fa 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="none"
    style={
      [
        {
          "backgroundColor": "#F9FAFB",
          "borderRadius": 12,
          "padding": 8,
        },
        undefined,
      ]
    }
    testID="ui-card"
  >
    <Text>
      card body
    </Text>
  </View>
</View>
`;
